<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>hibsp</groupId>
  <artifactId>hibsp</artifactId>
  <version>0.0.1-SNAPSHOT</version>
    
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>1.10</java.version>
  </properties>

  <dependencies>
        <!-- https://mvnrepository.com/artifact/junit/junit -->
	<dependency>
	    <groupId>junit</groupId>
	    <artifactId>junit</artifactId>
	    <version>4.12</version>
	    <scope>test</scope>
	</dependency>
    
	    <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
	<dependency>
	    <groupId>com.h2database</groupId>
	    <artifactId>h2</artifactId>
	    <version>1.4.197</version>
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
	<dependency>
	    <groupId>org.hibernate</groupId>
	    <artifactId>hibernate-core</artifactId>
	    <version>5.3.2.Final</version>
	</dependency>
	
	<dependency>
    	<groupId>javax.xml.bind</groupId>
    	<artifactId>jaxb-api</artifactId>
    	<version>2.3.0</version>
	</dependency>
    
    <dependency>
		<groupId>org.projectlombok</groupId>
		<artifactId>lombok</artifactId>
		<version>1.18.2</version>
		<scope>provided</scope>
	</dependency>
	
  </dependencies>
  <build>
        <finalName>Hibernate orm</finalName>
        <plugins>
        <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.10</source>
                    <target>1.10</target>
                    <compilerArgs>
	            		<arg>--add-modules</arg>
	            		<arg>java.xml.bind</arg>
	        		</compilerArgs>
                </configuration>
            </plugin>
                            <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>1.6.0</version>
                    <configuration>
                    <!-- <classpathScope>main</classpathScope> -->
                        <mainClass>hiberex.hiber_ex.App</mainClass>
                    </configuration>
                    <executions>
                        <execution>
                            <id>run-app</id>
                            <phase>execution</phase>
                            <goals><goal>java</goal></goals>
                        </execution>
                    </executions>
                </plugin>
        </plugins>
    
  </build>
  
</project>